--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "desktop",
-  "productName": "GitHub Desktop",
+  "productName": "Wevolver Desktop",
   "bundleID": "com.github.GitHubClient",
-  "companyName": "GitHub, Inc.",
+  "companyName": "Wevolver",
   "version": "1.1.1-beta1",
   "main": "./main.js",
   "repository": {
@@ -11,7 +11,7 @@
   },
   "description": "Simple collaboration from your desktop",
   "author": {
-    "name": "GitHub, Inc.",
+    "name": "Wevolver, Inc.",
     "email": "opensource+desktop@github.com",
     "url": "https://desktop.github.com/"
   },
