--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "productName": "Wevolver Desktop",
   "bundleID": "com.wevolver.GitClient",
   "companyName": "Wevolver",
-  "version": "1.1.1-beta1",
+  "version": "1.1.2",
   "main": "./main.js",
   "repository": {
     "type": "git",
